@@ -1,3 +1,4 @@
+Revision 121 	 2011-08-11 	 Never delete an account from Google Apps. Just rename it. 
 Revision 120 	 2011-05-05 	 Enabling Django Compressor 
 Revision 119 	 2011-05-04 	 Cleaning up fabfile 
 Revision 118 	 2011-05-04 	 Setting EMAIL_BACKEND to locmem in test_settings 
